[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://hud/GameTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/PearSoda.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/MenuScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/dust.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/MusicPlayer.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/PearSodaLarge.tres" type="DynamicFont" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="Menu" parent="HUDLayer" instance=ExtResource( 5 )]
position = Vector2( 640, 384 )
z_index = 5

[node name="GameTimer" parent="HUDLayer" instance=ExtResource( 3 )]
position = Vector2( 32, 32 )

[node name="TargetLabelNode" type="Node2D" parent="HUDLayer"]
position = Vector2( 32, 736 )

[node name="TargetLabel" type="Label" parent="HUDLayer/TargetLabelNode"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )

[node name="LevelLabelNode" type="Node2D" parent="HUDLayer"]
position = Vector2( 40, 96 )
scale = Vector2( 1.5, 1.5 )

[node name="LevelLabel" type="Label" parent="HUDLayer/LevelLabelNode"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.403922, 0.12549, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 4 )
text = "LEVEL 1"

[node name="AmmoLabelNode" type="Node2D" parent="HUDLayer"]
position = Vector2( 32, 128 )

[node name="AmmoLabel" type="Label" parent="HUDLayer/AmmoLabelNode"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "3/3"

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
z_index = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.709804, 0.592157, 0.65098, 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "MusicBus"
script = ExtResource( 7 )

[node name="PauseNode" type="Node2D" parent="."]
position = Vector2( 640, 340 )

[node name="PausePopup" type="Popup" parent="PauseNode"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="PauseNode/PausePopup"]
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "PAUSED"
align = 1

[node name="Button" type="Button" parent="PauseNode/PausePopup"]
margin_right = 12.0
margin_bottom = 20.0
text = "Continuer"

[connection signal="pressed" from="PauseNode/PausePopup/Button" to="." method="_on_Button_pressed"]
